--- a/app-ols-integration/main/default/classes/OLSTriggerHelper.cls
+++ b/app-ols-integration/main/default/classes/OLSTriggerHelper.cls
@@ -182,7 +182,7 @@ public class OLSTriggerHelper {
         // FOR TESTING: job for 3 minutes from now
         String threeMinutesFromNow = getThreeMinutesFromNow();
 
-        System.schedule(cronJobName, threeMinutesFromNow, schedulable);
+        System.schedule(cronJobName, everyDay, schedulable);
     }
 
     /**
